# free-video-continuum

./: .gitignore  Cargo.toml  README.md  continuum.db-shm  continuum.db-wal
cli/: Cargo.toml
cli/src/: client.rs  interactive.rs  main.rs
docs/: structure.md
server/: Cargo.toml
server/src/: main.rs
server/src/api/: disks.rs
server/src/db/: database.rs  disks.rs  media_roots.rs  mod.rs  roots.rs
server/src/db/migrations/: mod.rs  v0001_create_tables.rs
server/src/storage/: disks.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
