[package]
name = "continuum-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.12"
