[package]
name = "continuum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4"] }
shared = { path = "../shared" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
